# dfe-snippets

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.Maia.hardware  Makefile.common  README  README.md  Readme.md  WISHLIST  common.cpp  sparse_matrix.hpp  test_partition.cpp  utils.cpp  utils.hpp
Benchmarks/DramBandwidthBenchmarkDefaultMemCtrl/: Readme.md
Benchmarks/DramBandwidthBenchmarkDefaultMemCtrl/src/: DramBandwidthBenchmarkDefaultMemCtrlCpuCode.c  DramBandwidthBenchmarkDefaultMemCtrlKernel.maxj  DramBandwidthBenchmarkDefaultMemCtrlManager.maxj
Benchmarks/InfinibandBenchmark/src/: InfinibandBenchmarkCpuCode.cpp  InfinibandBenchmarkKernel.maxj  InfinibandBenchmarkManager.maxj
Benchmarks/ResourceUsage/src/: ResourceUsageCpuCode.c  ResourceUsageKernel.maia  ResourceUsageKernel.maia.pipelining0.5  ResourceUsageKernel.max3  ResourceUsageKernel.maxj  ResourceUsageManager.maxj
CSRSpMV/: CMakeLists.txt
CSRSpMV/experimental-data/SpmvBase_MAIA_DFE_16pipes_8decoding_bits_dptrue/: ReadControl.maxja  fpgaNaiveKernel.maxja
CSRSpMV/experimental-data/SpmvBase_MAIA_DFE_32pipes_1024cache_150MHz_0.5pf/: fpgaNaiveManager.javaa
CSRSpMV/scripts/: run-sim.sh
CSRSpMV/src/cpu/: fpga.hpp
CSRSpMV/src/dfe/: CSRControlSM.java  ReadControl.java
DataStructures/CircularBuffer/src/: CircularBufferCpuCode.c  CircularBufferKernel.maxj
DataStructures/DFEsmFifo/src/: FifoWrapperKernel.maxj  FifoWrapperManager.maxj  FifoWrapperSM.maxj
DataStructures/FetchSubTuple/src/: FetchSubTuple.maxj  FetchSubTupleCpuCode.cpp  FetchSubTupleKernel.maxj  FetchSubTupleManager.maxj  FifoWrapperSM.maxj
DataStructures/FifoAsShiftRegister/: Readme.md
DataStructures/FifoAsShiftRegister/src/: FifoAsShiftRegister.maxj  FifoAsShiftRegisterCpuCode.c
DataStructures/FifoBuffer/: Readme.md
DataStructures/FifoBuffer/src/: FifoBuffer.maxj  FifoBufferCpuCode.c  FifoBufferKernel.maxj  FifoBufferManager.maxj
Demo/DemoProject/: Design.maxj  Makefile  main.c
Demo/DemoProject/src/: DemoCpuCode.c  DemoKernel.maxj  DemoManager.maxj
Demo/TrainingExercise/src/: TrainingExerciseManager.maxj
Infrastructure/Accumulator/: Readme.md
Infrastructure/Accumulator/src/: AccumulatorKernel.maxj  AccumulatorManager.maxj
Infrastructure/BRAMCustomBitwidthROM/src/: BRAMCustomBitwidthROMCpuCode.c  BRAMCustomBitwidthROMKernel.maxj  BRAMCustomBitwidthROMManager.maxj
Infrastructure/BRAMPersistence/src/: BRAMPersistenceCpuCode.c  BRAMPersistenceKernel.maxj  BRAMPersistenceManager.maxj
Infrastructure/BRAMReadWrite/: Readme.md
Infrastructure/BRAMReadWrite/src/: BRAMReadWriteCpuCode.c  BRAMReadWriteKernel.maxj  (+1 more)
Infrastructure/ConnectedKernels/: Readme.md
Infrastructure/CustomMemoryControl/: README
Infrastructure/InfinibandBenchmark/: Readme.md
Infrastructure/LinearMemoryControl/: .gitignore  README
Infrastructure/LinkingThirdPartyLibrary/: README.md  Readme.md
Infrastructure/MaxRingMulticast/: Readme.txt
Infrastructure/TwoConnectedKernels/: README
MaxCompiler-2013.2.2/LinearAlgebra/: README
MemoryTester/: Makefile  Readme.txt
Probability/: README
Sorting/BitonicSorting/: Readme.md
Sorting/ParallelBitonicSort/: Readme.md
Summation/Accumulator/: Readme.md
Summation/FullSummationBalancedTree/: README
Summation/FullSummationHardcodedLoopLength/: .gitignore  README
Summation/PartialSummationHardcodedLoopLength/: .gitignore  .maxproject  README
Test/TerminationCondition/: Readme.md
Tests/Accumulator/: Readme.md
applications/: CMakeLists.txt  Makefile.common
applications/OptionPricing/: FPExpCore.maxj  Makefile  Maxfiles.h  NrandomCore.maxj  OptionPricing.cpp  OptionPricing.hpp  OptionPricingKernel.maxj  OptionPricingKernelLib.maxj  OptionPricingManager.maxj  UrandomCore.maxj
applications/ParallelMovingAverage/: Makefile  ParallelMovingAverage.cpp  ParallelMovingAverage.hpp  ParallelMovingAverageMaxfiles.h
applications/QPI/: README.txt
applications/QPI/src/: FFT16Kernel1.maxj  FFT16Kernel2.maxj  FFT16Kernel3.maxj  FFT2DRAM.maxj  FFTShiftKernel.maxj  IFFT16Kernel1.maxj  IFFT16Kernel2.maxj  IFFT16Kernel3.maxj  PhiComputeKernel.maxj  QPI.c  QPIKernel.maxj  QPIManager.maxj  RotatorKernel.maxj
applications/QPI/src/imgs/: i1.txt  i2.txt  i3.txt  i4.txt  i5
applications/fm-index/: Readme.md
applications/fm-index/reads/: chr22.fastq
applications/fm-index/src/: CmdKernel.maxj  EmKernel.maxj  EmManager.maxj  align.cpp  align.hpp  def.hpp  file.cpp  file.hpp  index.hpp  main.cpp  reads.cpp  reads.hpp
experimental-data/SpmvBase_MAIA_DFE_16pipes_8decoding_bits_dptrue/: ProcessingElement.maxja
experimental-data/SpmvBase_MAIA_DFE_32pipes_1024cache_150MHz_0.5pf/: fpgaNaiveKernel.javaa  report.txt
include/dfesnippets/: FormatterUtils.hpp  NumericUtils.hpp  Timing.hpp  VectorUtils.hpp
include/sparse/: utils.cpp
scripts/: create.py  gen_sm.py  manage.py  run-sim.sh  test_spmv.sh
scripts/template/: Makefile.py.common
sparse/: CMakeLists.txt  common.cpp  common.h  partition.hpp  sparse_matrix.hpp
src/: BcsrvDecoder.maxj  CSRControlSM.maxj  Cpu.h  EvalKernel.maxj  Fpga.h  OutputControlSM.java  OutputControlSM.maxj  ProcessingElement.java  ProcessingElement.maxj  ReadBcsrvControl.java  ReadBcsrvControl.maxj  ReadControl.java  SpmvEngineParams.java  SpmvEngineParams.maxj  Types.java  VectorCache.java  fpgaNaiveCpuCode.cpp  fpgaNaiveKernel.java  fpgaNaiveKernel.maxj  fpgaNaiveManager.java  fpgaNaiveManager.maxj  main.cpp  utils.h
src/cpu/: main.cpp  partition.hpp  test_partition.cpp
src/dfe/: fpgaNaiveManager.java
test/: Makefile.common
test/LinearAlgebra/CSRSpMV/: CMakeLists.txt
test/LinearAlgebra/CSRSpMV/experimental-data/SpmvBase_MAIA_DFE_16pipes_8decoding_bits_dptrue/: ReadBcsrvControl.maxja
test/LinearAlgebra/CSRSpMV/experimental-data/SpmvBase_MAIA_DFE_32pipes_1024cache_150MHz_0.5pf/: ReadBcsrvControl.javaa  ReadControl.javaa
test/LinearAlgebra/CSRSpMV/scripts/: dfe-benchmark.sh  run_single.sh  test_spmv.sh
test/LinearAlgebra/CSRSpMV/src/: CSRControlSM.maxj  CSRSpMVCpuCode.cpp  fpga.hpp  fpgaNaiveManager.maxj  main.cpp  scheduling.hpp
test/Summation/: README
(+292 files in other folders)
